--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ pydantic = "^2.9.2"
 requests = "^2.32.3"
 pydantic-settings = "^2.5.2"
 loguru = "^0.7.2"
+typer = "^0.12.5"
 
 [tool.poetry.dev-dependencies]
 commitizen = "^2.19.0"
